--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,43 +1,44 @@
-name: Build APK
+name: Build Android APK
 
 on:
   push:
     branches:
-      - main
+      - main  # يتم تشغيل Workflow عند التحديثات على فرع main
   pull_request:
     branches:
-      - main
+      - main  # يتم تشغيل Workflow عند طلبات السحب إلى فرع main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up JDK
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
 
-    - name: Ensure gradle-wrapper.jar exists
-      run: |
-        if [ ! -f gradle/wrapper/gradle-wrapper.jar ]; then
-          echo "gradle-wrapper.jar not found! Downloading it..."
+      - name: Download gradle-wrapper.jar
+        run: |
           mkdir -p gradle/wrapper
-          wget https://github.com/k836349/Android-Mod-Menu-2.6/blob/main/gradle/wrapper/gradle-wrapper.jar -O gradle/wrapper/gradle-wrapper.jar
-        fi
+          wget -O gradle/wrapper/gradle-wrapper.jar https://github.com/k836349/Android-Mod-Menu-2.6/raw/main/gradle/wrapper/gradle-wrapper.jar
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      - name: Download gradle-wrapper.properties
+        run: |
+          wget -O gradle/wrapper/gradle-wrapper.properties https://github.com/k836349/Android-Mod-Menu-2.6/raw/main/gradle/wrapper/gradle-wrapper.properties
 
-    - name: Build APK
-      run: ./gradlew assembleDebug
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: app-debug.apk
-        path: app/build/outputs/apk/debug/app-debug.apk
+      - name: Build APK
+        run: ./gradlew assembleDebug
+
+      - name: Upload APK as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-debug-apk
+          path: app/build/outputs/apk/debug/app-debug.apk
