--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Download gradle-wrapper.jar
         run: |
           mkdir -p gradle/wrapper
-          wget -O gradle/wrapper/gradle-wrapper.jar https://github.com/k836349/Android-Mod-Menu-2.6/raw/main/gradle/wrapper/gradle-wrapper.jar
+          wget -O gradle/wrapper/gradle-wrapper.jar https://github.com/gradle/gradle/raw/master/gradle/wrapper/gradle-wrapper.jar
 
       - name: Download gradle-wrapper.properties
         run: |
