--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             <activity
     android:name=".MainActivity"
     android:exported="true">
+    </activity>
         </activity>
         <service
             android:name="uk.lgl.modmenu.FloatingModMenuService"
