--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         <activity android:name="uk.lgl.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <activity android:name=".MainActivity"
+    android:exported="true"> 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <activity
