--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,44 +1,37 @@
-name: Build Android APK
+name: Build APK
 
 on:
   push:
-    branches:
-      - main  # يتم تشغيل Workflow عند التحديثات على فرع main
-  pull_request:
-    branches:
-      - main  # يتم تشغيل Workflow عند طلبات السحب إلى فرع main
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
 
-      - name: Download gradle-wrapper.jar
-        run: |
-          mkdir -p gradle/wrapper
-          wget -O gradle/wrapper/gradle-wrapper.jar https://github.com/gradle/gradle/raw/master/gradle/wrapper/gradle-wrapper.jar
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v2
+        with:
+          build-tools-version: '33.0.0' # أو أحدث
+          api-level: '33'
+          ndk-version: 'latest'
 
-      - name: Download gradle-wrapper.properties
-        run: |
-          wget -O gradle/wrapper/gradle-wrapper.properties https://github.com/k836349/Android-Mod-Menu-2.6/raw/main/gradle/wrapper/gradle-wrapper.properties
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+      - name: Grant execute permission to gradlew
+        run: chmod +x ./gradlew
 
       - name: Build APK
-        run: ./gradlew assembleDebug
+        run: ./gradlew assembleDebug # أو assembleRelease
 
-      - name: Upload APK as artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload APK
+        uses: actions/upload-artifact@v3
         with:
-          name: app-debug-apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+          name: app-debug.apk
+          path: app/build/outputs/apk/debug/app-debug.apk # أو مسار APK الإنتاج
