--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -2,7 +2,7 @@ name: Build APK
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main ] # Or your main branch name
 
 jobs:
   build:
@@ -11,27 +11,27 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up JDK 17
+      - name: Set up JDK 17 # Or your preferred JDK version
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'temurin'
+          distribution: 'temurin' # Or 'zulu', 'adopt', etc.
 
       - name: Set up Android SDK
         uses: android-actions/setup-android@v2
         with:
-          build-tools-version: '33.0.0' # أو أحدث
-          api-level: '33'
-          ndk-version: 'latest'
+          build-tools-version: '33.0.0' # Or latest stable version
+          api-level: '33' # Or your target API level
+          ndk-version: 'latest' # Or a specific NDK version if needed
 
       - name: Grant execute permission to gradlew
         run: chmod +x ./gradlew
 
       - name: Build APK
-        run: ./gradlew assembleDebug # أو assembleRelease
+        run: ./gradlew assembleDebug # Or ./gradlew assembleRelease for a release build
 
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4 # Updated to v4
         with:
-          name: app-debug.apk
-          path: app/build/outputs/apk/debug/app-debug.apk # أو مسار APK الإنتاج
+          name: app-debug.apk # Or a more descriptive name
+          path: app/build/outputs/apk/debug/app-debug.apk # Adjust path if necessary
