--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: '17' # تحديث الإصدار إلى 17
+          java-version: '17'
 
       - name: Download Gradle Wrapper
         run: |
@@ -28,7 +28,7 @@ jobs:
         run: ./gradlew assembleDebug
 
       - name: Upload APK
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4 # تحديث الإصدار إلى 4
         with:
           name: my-apk
           path: app/build/outputs/apk/debug/app-debug.apk
