--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -28,7 +28,7 @@ jobs:
         run: ./gradlew assembleDebug
 
       - name: Upload APK
-        uses: actions/upload-artifact@v4 # استخدم الإصدار 4
+        uses: actions/upload-artifact@v4
         with:
           name: my-apk
           path: app/build/outputs/apk/debug/app-debug.apk
