--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Build APK
         run: |
+          chmod +x ./gradlew
           ./gradlew assembleDebug
 
       - name: Upload APK
