--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,37 +1,29 @@
-name: Build APK
+name: Publish Release APK
 
 on:
   push:
-    branches:
-      - main
+    tags: [ "*" ]
 
 jobs:
-  build:
+  publish:
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - name: set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: gradle
 
-      - name: Set up JDK
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Download Gradle Wrapper
-        run: |
-          mkdir -p gradle/wrapper
-          curl -L -o gradle/wrapper/gradle-wrapper.jar https://github.com/gradle/gradle/releases/download/v7.4.2/gradle-wrapper.jar
-          echo "distributionUrl=https\://services.gradle.org/distributions/gradle-7.4.2-bin.zip" > gradle/wrapper/gradle-wrapper.properties
-          chmod +x gradle/wrapper/gradle-wrapper.jar
-
-      - name: Build APK
-        run: |
-          chmod +x ./gradlew
-          ./gradlew assembleDebug --stacktrace
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: my-apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build Release APK
+      run: ./gradlew assembleRelease
+    - name: Publish APK
+      uses: alsrb968/action-release-apk@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
+        APP_FOLDER: app
